# test-reactpy

./: .envrc  pyproject.toml
.bin/: run
src/trp/: cli.py  config.py  main.py
